...
        <variable
            name="viewModel"
            type="com.fias.ddrhighspeed.ScrollSpeedBoardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.DdrScrollSpeedBoard"
        tools:context=".search.songsearch.EstimateByNameFragment">

...
        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/bus_stop_item_vertical_padding"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/song_detail_table_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollSpeedLabel">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
...
                app:layout_constraintBottom_toTopOf="@id/increment_up"
                app:layout_constraintEnd_toStartOf="@id/increment_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollSpeedLabel">

                <com.fias.ddrhighspeed.view.TextEditWithHideKeyBoard
                    android:id="@+id/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={viewModel.scrollSpeed}" />
...
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_vertical_fullsize_material"
                android:text="@string/spin_button_up_label"
                app:layout_constraintBottom_toTopOf="@id/tab_layout"
                app:layout_constraintEnd_toStartOf="@id/increment_down"
                app:layout_constraintStart_toEndOf="@id/textField"
                app:layout_constraintTop_toBottomOf="@id/scrollSpeedLabel" />

            <com.fias.ddrhighspeed.view.SpinButton
                android:id="@+id/increment_down"
...
        <LinearLayout
            android:id="@+id/song_detail_table_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/bus_stop_item_vertical_padding"
            android:paddingBottom="@dimen/bus_stop_item_vertical_padding"
            app:layout_constraintBottom_toTopOf="@id/song_detail_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout">

            <TextView
                android:id="@+id/blank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text=""
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/song_detail_list"
                app:layout_constraintEnd_toStartOf="@id/high_speed_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/bpm_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/table_header_bpm"
                android:textSize="23sp"
                android:textStyle="bold"
...
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/table_header_hs"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/song_detail_list"
                app:layout_constraintEnd_toStartOf="@id/scroll_speed_header"
                app:layout_constraintStart_toEndOf="@id/bpm_header"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/scroll_speed_header"
                android:layout_width="0dp"
...
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song_detail_table_header" />

        <TextView
            android:id="@+id/asterisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/explain_basic_text"
            app:layout_constraintTop_toBottomOf="@id/song_detail_list" />

        <TextView
            android:id="@+id/explain_basic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
