<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2021 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/result_row_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="@dimen/bus_stop_item_vertical_padding"
        android:paddingBottom="@dimen/bus_stop_item_vertical_padding"
        android:textStyle="bold">

        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bpm_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/high_speed_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scroll_speed_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:gravity="end"
            android:textSize="20sp" />

    </LinearLayout>
</layout>
