<resources>
    <string name="app_name">DDRハイスピ計算機</string>
    <string name="input_label">スクロールスピード</string>
    <string name="input_hint">BPM×ハイスピードの希望する最大値を入力</string>
    <string name="spin_button_up_label">▲</string>
    <string name="spin_button_down_label">▼</string>
    <string name="table_header_bpm">BPM</string>
    <string name="table_header_hs">ﾊｲｽﾋﾟ</string>
    <string name="table_header_scroll_speed">ｽｸﾛｰﾙｽﾋﾟｰﾄﾞ</string>
    <string name="search_song_name_label">検索条件</string>
    <string name="search_song_name_hint">曲名を入力してください</string>
    <string name="search_course_name_hint">コース、段位名を入力してください</string>
    <string name="back_to_search_description">back</string>
    <string name="song_name_sample_text">曲名</string>
    <string name="display_version">App Version: %1$s</string>
    <string name="open">開く</string>
    <string name="close">閉じる</string>
    <string name="asterisk">※</string>
    <string name="explanation_basic">基本①： 曲中で一番使用されているBPMです。\n基本②： 使用されている箇所があり考慮が必要なBPMです。</string>
    <string name="reset_button_label">RESET</string>
    <string name="data_version_undefined">DataVersion: Undefined</string>
    <string name="update_data_button_label">楽曲データを更新</string>
    <string name="now_loading">Now Loading…</string>
    <string name="song_name_in_course_1st">1st: %1$s</string>
    <string name="song_name_in_course_2nd">2nd: %1$s</string>
    <string name="song_name_in_course_3rd">3rd: %1$s</string>
    <string name="song_name_in_course_4th">4th: %1$s</string>
    <!--  Sample AdMob app ID: ca-app-pub-3940256099942544/6300978111 -->
    <!--  product app ID: ca-app-pub-8151928728657048/6961473178 -->
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="security_policy_title">セキュリティポリシー\n(外部ページ)</string>
    <string name="contact_us_title">お問い合わせ\n(メール)</string>
    <string name="version_dummy">Version: no data</string>
</resources>