...
            android:id="@+id/search_word_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/bus_stop_item_vertical_padding"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/searched_songs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_label">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:hint="@string/search_song_name_hint"
                app:errorIconDrawable="@drawable/ic_error"
...
                app:layout_constraintBottom_toTopOf="@id/searched_songs"
                app:layout_constraintEnd_toStartOf="@id/reset_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_label">

                <com.fias.ddrhighspeed.view.TextEditWithHideKeyBoard
                    android:id="@+id/search_word_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={fragmentViewModel.searchWord}" />
...
